--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.4.10
+  riverpod: ^2.5.0
 
 
   cupertino_icons: ^1.0.2
